--- a/FastApiSetUp/docker/Dockerfile
+++ b/FastApiSetUp/docker/Dockerfile
@@ -4,11 +4,11 @@ RUN mkdir /fastapi_app
 
 WORKDIR /fastapi_app
 
-COPY requirements.txt .
+COPY ../requirements.txt .
 
 RUN pip install -r requirements.txt
 
-COPY . .
+COPY .. .
 
 RUN chmod a+x docker
 
