--- a/FastApiSetUp/docker/docker-compose.yaml
+++ b/FastApiSetUp/docker/docker-compose.yaml
@@ -7,13 +7,13 @@ services:
     expose:
       - 1221
     env_file:
-      - .env-non-dev
+      - ../.env-non-dev
 
   app:
     build:
-      context: .
+      context: ..
     env_file:
-      - .env-non-dev
+      - ../.env-non-dev
     container_name: fastapi_app
     command: ["/fastapi_app/docker/app.sh"]
     ports:
