Добавил пару методов на проверку авторизованности пользователя, убрал psycopg из зависимостей

--- a/.env-non-dev
+++ b/.env-non-dev
@@ -1,12 +1,11 @@
-DB_HOST = db
-DB_PORT = 1234
-DB_PASSWORD = postgres
-DB_NAME = postgres
-DB_USER = postgres
+DB_HOST=db
+DB_PORT=1234
+DB_PASS=postgres
+DB_NAME=postgres
+DB_USER=postgres
 
 POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
-
-SECRET_KEY_JWT = O34xcQupU.89cNqbh.P!91bROCAYLLv3byC%xvpvr$3tzHN!
+SECRET_KEY_JWT=O34xcQupU.89cNqbh.P!91bROCAYLLv3byC%xvpvr$3tzHN!
