Перенес ключ авторизации в .env-non-dev (не забудьте добавить в свой .env файл!)

--- a/.env-non-dev
+++ b/.env-non-dev
@@ -9,3 +9,4 @@ POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
 SECRET_KEY_JWT=O34xcQupU.89cNqbh.P!91bROCAYLLv3byC%xvpvr$3tzHN!
+SECRET_AUTH=SECRET
