--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,22 +1,21 @@
-version: "3.7"
 services:
   db:
     image: postgres:15
     container_name: db_app
-    command: -p 1221
+    command: -p 1221 # Должен быть такой же, как и в используемом .env файле
     expose:
       - 1221
     env_file:
-      - ../.env-non-dev
+      - .env-non-dev
 
   app:
     build:
-      context: ..
+      context: .
     env_file:
-      - ../.env-non-dev
+      - .env-non-dev
     container_name: fastapi_app
     command: ["/fastapi_app/docker/app.sh"]
     ports:
-      - 9999:8000
+      - 9999:8000 # :8000 - такой же в app.sh
     depends_on:
       - db
