начал интеграцию с rabbitmq и celery

--- a/.env-non-dev
+++ b/.env-non-dev
@@ -10,3 +10,8 @@ POSTGRES_PASSWORD=postgres
 
 SECRET_KEY_JWT=O34xcQupU.89cNqbh.P!91bROCAYLLv3byC%xvpvr$3tzHN!
 SECRET_AUTH=SECRET
+
+BROKER_PORT=5672
+
+SMTP_PASS= #TODO: разобраться с аккаунтом, рассылающим письма
+SMTP_USER=
