--- a/.env-non-dev
+++ b/.env-non-dev
@@ -12,6 +12,7 @@ SECRET_KEY_JWT=O34xcQupU.89cNqbh.P!91bROCAYLLv3byC%xvpvr$3tzHN!
 SECRET_AUTH=SECRET
 
 BROKER_PORT=5672
+BROKER_HOST=rabbitmq
 
 SMTP_PASS= #TODO: разобраться с аккаунтом, рассылающим письма
 SMTP_USER=
