Add ability to upload video and video model

--- a/.env-non-dev
+++ b/.env-non-dev
@@ -8,6 +8,8 @@ POSTGRES_DB=postgres
 POSTGRES_USER=postgres
 POSTGRES_PASSWORD=postgres
 
+BUCKET_NAME=bucket_name
+
 SECRET_KEY_JWT=O34xcQupU.89cNqbh.P!91bROCAYLLv3byC%xvpvr$3tzHN!
 SECRET_AUTH=SECRET
 
