--- a/requirements.txt
+++ b/requirements.txt
@@ -4,9 +4,12 @@ anyio==3.6.2
 asgiref==3.6.0
 asyncpg==0.27.0
 attrs==22.2.0
+awscli==1.27.133
 bcrypt==4.0.1
 beautifulsoup4==4.11.1
 billiard==3.6.4.0
+boto3==1.26.133
+botocore==1.29.133
 bs4==0.0.1
 build==0.10.0
 CacheControl==0.12.11
@@ -19,13 +22,14 @@ click==8.1.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
-colorama==0.4.6
+colorama==0.4.4
 contourpy==1.0.6
 crashtest==0.4.1
 cryptography==40.0.1
 cycler==0.11.0
 distlib==0.3.6
 dnspython==2.3.0
+docutils==0.16
 dulwich==0.21.3
 email-validator==1.3.1
 et-xmlfile==1.1.0
@@ -49,12 +53,11 @@ installer==0.7.0
 itsdangerous==2.1.2
 jaraco.classes==3.2.3
 Jinja2==3.1.2
+jmespath==1.0.1
 jsonschema==4.17.3
 keyring==23.13.1
 kiwisolver==1.4.4
 kombu==5.2.4
-line-profiler==4.0.2
-line-profiler-pycharm==1.1.0
 lockfile==0.12.2
 makefun==1.15.1
 Mako==1.2.4
@@ -73,12 +76,14 @@ pexpect==4.8.0
 Pillow==9.3.0
 pkginfo==1.9.6
 platformdirs==2.6.2
+poetry==1.4.2
 poetry-core==1.5.2
 poetry-plugin-export==1.3.0
 prettytable==3.5.0
 prometheus-client==0.16.0
 prompt-toolkit==3.0.38
 ptyprocess==0.7.0
+pyasn1==0.5.0
 pycparser==2.21
 pydantic==1.10.7
 PyJWT==2.6.0
@@ -91,11 +96,13 @@ python-dotenv==1.0.0
 python-multipart==0.0.6
 pytz==2022.7
 pywin32-ctypes==0.2.0
-PyYAML==6.0
+PyYAML==5.4.1
 rapidfuzz==2.15.0
 requests==2.28.1
 requests-toolbelt==0.10.1
 rfc3986==1.5.0
+rsa==4.7.2
+s3transfer==0.6.1
 shellingham==1.5.0.post1
 six==1.16.0
 sniffio==1.3.0
@@ -117,5 +124,6 @@ watchfiles==0.19.0
 wcwidth==0.2.5
 webencodings==0.5.1
 websockets==11.0
+xattr==0.10.1
 xmltodict==0.13.0
 zipp==3.15.0
