Обновил конфигурацию docker-compose.yaml, вынес порты в .env файл, определил порядок запуска сервисов при помощи rabbitmq.Dockerfile и healthcheck параметров

--- a/.env-non-dev
+++ b/.env-non-dev
@@ -11,8 +11,18 @@ POSTGRES_PASSWORD=postgres
 SECRET_KEY_JWT=O34xcQupU.89cNqbh.P!91bROCAYLLv3byC%xvpvr$3tzHN!
 SECRET_AUTH=SECRET
 
-BROKER_PORT=5672
-BROKER_HOST=rabbitmq
+APP_PORT=8000
 
-SMTP_PASS= #TODO: разобраться с аккаунтом, рассылающим письма
+BROKER_PORT=5672
+BROKER_HOSTNAME=rabbitmq
+BROKER_HOST_PORT=15672
+
+FLOWER_HOST_PORT=8888
+CELERY_PORT=5555
+
+SMTP_PASS=
 SMTP_USER=
+SMTP_HOST=
+SMTP_PORT=
+
+BUCKET_NAME=
