Убрал затычки и добавил несколько полей

--- a/.env-non-dev
+++ b/.env-non-dev
@@ -1,24 +1,26 @@
-DB_HOST=db
-DB_PORT=1221
-DB_PASS=postgres
-DB_NAME=postgres
-DB_USER=postgres
+DB_HOST=
+DB_PORT=
+DB_PASS=
+DB_NAME=
+DB_USER=
 
-POSTGRES_DB=postgres
-POSTGRES_USER=postgres
-POSTGRES_PASSWORD=postgres
+POSTGRES_DB=
+POSTGRES_USER=
+POSTGRES_PASSWORD=
 
-SECRET_KEY_JWT=O34xcQupU.89cNqbh.P!91bROCAYLLv3byC%xvpvr$3tzHN!
-SECRET_AUTH=SECRET
+APP_PORT=
 
-APP_PORT=8000
+SECRET_KEY_JWT=
+SECRET_AUTH=
 
-BROKER_PORT=5672
-BROKER_HOSTNAME=rabbitmq
-BROKER_HOST_PORT=15672
+BROKER_HOSTNAME=
+#BROKER_HOSTNAME=
+BROKER_PORT=
+BROKER_HOST_PORT=
+BROKER_PASS=
 
-FLOWER_HOST_PORT=8888
-CELERY_PORT=5555
+FLOWER_HOST_PORT=
+CELERY_PORT=
 
 SMTP_PASS=
 SMTP_USER=
