--- a/requirements.txt
+++ b/requirements.txt
@@ -39,7 +39,7 @@ python-dotenv~=1.0.0
 python-multipart~=0.0.6
 pytz~=2023.3
 PyYAML~=6.0
-redis~=4.5.5
+# redis~=4.5.5
 six~=1.16.0
 sniffio~=1.3.0
 SQLAlchemy~=2.0.15
