--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -6,7 +6,7 @@ services:
     expose:
       - 1221
     env_file:
-      - .env-non-dev
+      - dev.env
 
   rabbit:
     image: rabbitmq:3.11
@@ -17,23 +17,34 @@ services:
       - 5672:5672
     restart: always
 
+#  pgadmin:
+#    container_name: pgadmin
+#    image: dpage/pgadmin4
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: noemail@noemail.com
+#      PGADMIN_DEFAULT_PASSWORD: root
+#    ports:
+#      - "5050:80"
+
   app:
     build:
       context: .
     env_file:
-      - .env-non-dev
+      - dev.env
     container_name: fastapi_app
     command: ["/fastapi_app/docker/app.sh"]
     ports:
       - 9999:8000 # :8000 - такой же в app.sh
     depends_on:
       - db
+#    volumes:
+#      - ~/.aws:/root/.aws:ro
 
   celery:
     build:
       context: .
     env_file:
-      - .env-non-dev
+      - dev.env
     container_name: celery_app
     command: [ "/fastapi_app/docker/celery.sh", "celery"]
     depends_on:
@@ -44,7 +55,7 @@ services:
     build:
       context: .
     env_file:
-      - .env-non-dev
+      - dev.env
     container_name: flower_app
     command: [ "/fastapi_app/docker/celery.sh", "flower"]
     depends_on:
