--- a/dev.env
+++ b/dev.env
@@ -8,13 +8,13 @@ POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
-APP_PORT=
+BACK_APP_PORT=
+FRONT_APP_PORT=
 
 SECRET_KEY_JWT=
 SECRET_AUTH=
 
 BROKER_HOSTNAME=
-#BROKER_HOSTNAME=
 BROKER_PORT=
 BROKER_HOST_PORT=
 BROKER_PASS=
