Добавил логику отправки письма после регистрации, заменил поле secret_auth на два поля: verification_token и reset_password_token

--- a/dev.env
+++ b/dev.env
@@ -12,7 +12,8 @@ BACK_APP_PORT=
 FRONT_APP_PORT=
 
 SECRET_KEY_JWT=
-SECRET_AUTH=
+RESET_PASSWORD_TOKEN=
+VERIFICATION_TOKEN=
 
 BROKER_HOSTNAME=
 BROKER_PORT=
