--- a/dev.env
+++ b/dev.env
@@ -3,6 +3,7 @@ DB_PORT=
 DB_NAME=
 DB_USER=
 DB_PASS=
+DATABASE_URL=
 
 BACK_APP_PORT=
 FRONT_APP_PORT=
@@ -28,3 +29,4 @@ BUCKET_NAME=
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
+
