--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -10,20 +10,20 @@ services:
       - '/fastapi_app/frontend/node_modules'
     ports:
       - "${FRONT_APP_PORT}:${FRONT_APP_PORT}"
-    depends_on:
-        backend:
-            condition: service_healthy
+#    depends_on:
+#        backend:
+#            condition: service_healthy
 
   backend:
     container_name: fastapi_app
     restart: unless-stopped
-    platform: linux/amd64
+#    platform: linux/amd64
     build:
       context: .
       dockerfile: ./backend/Dockerfile
     env_file:
       - .env
-#    entrypoint: [ "sh", "/fastapi_app/backend/docker/app.sh" ]
+    command: [ "sh", "/fastapi_app/backend/docker/app.sh" ]
     ports:
       - "${BACK_APP_PORT}:${BACK_APP_PORT}"
 #    healthcheck:
@@ -138,9 +138,9 @@ services:
       PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - "${PGADMIN_HOST_PORT}:${PGADMIN_PORT}"
-    depends_on:
-      backend:
-        condition: service_healthy
+#    depends_on:
+#      backend:
+#        condition: service_healthy
 
 
 volumes:
