--- a/dev.env
+++ b/dev.env
@@ -9,6 +9,11 @@ POSTGRES_DB=
 POSTGRES_USER=
 POSTGRES_PASSWORD=
 
+PGADMIN_HOST_PORT=
+PGADMIN_PORT=
+PG_ADMIN_EMAIL=
+PG_ADMIN_PASS=
+
 BACK_APP_PORT=
 FRONT_APP_PORT=
 
