--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -19,6 +19,7 @@ email-validator==2.0.0.post2
 fastapi==0.96.0
 fastapi-users==11.0.0
 fastapi-users-db-sqlalchemy==5.0.0
+filetype==1.2.0
 flower==1.2.0
 greenlet==2.0.2
 gunicorn==20.1.0
